--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,7 +12,9 @@ rust-version = "1.70"
 tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-beta", features = ["clipboard-manager", "dialog"] }
+tauri = { version = "2.3.0", features = [] } # <-- Note: features list is now empty
+tauri-plugin-clipboard-manager = "2.3.0"    # <-- Updated version
+tauri-plugin-dialog = "2.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
